[tool.poetry]
name = "furaffinity_scrape"
version = "0.1.0"
description = "scrape utilites for furaffinity.net"
authors = ["Mark Grandi <markgrandi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
arrow = "^0.17.0"
attrs = "^20.3.0"
logging_tree = "^1.8.1"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.2"
pyhocon = "^0.3.57"
SQLAlchemy = "1.4.1"
SQLAlchemy-Utils = "^0.37.3"
sqlalchemy-repr = "^0.0.2"
furl = "^2.1.0"
aiohttp = {extras = ["speedups"], version = "^3.7.4"}
asyncpg = "^0.22.0"
yarl = "^1.6.3"
aio-pika = "^6.8.0"

[tool.poetry.dev-dependencies]
wheel = "^0.36.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
