[tool.poetry]
name = "furaffinity_scrape"
version = "0.1.0"
description = "scrape utilites for furaffinity.net"
authors = ["Mark Grandi <markgrandi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
arrow = "^1.2.3"
attrs = "^23.1.0"
logging_tree = "^1.9"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
pyhocon = "^0.3.60"
SQLAlchemy = "^2.0.15"
SQLAlchemy-Utils = "^0.41.1"
sqlalchemy-repr = "^0.1.0"
asyncpg = "^0.27.0"
yarl = "^1.9.2"
aio-pika = "^9.0.7"
cython = "^0.29.34"
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
alembic = "^1.11.1"

[tool.poetry.dev-dependencies]
wheel = "^0.40.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fascrape_cli = 'furaffinity_scrape.main:start'
